# stm32f407_play

./: Cargo.toml  build.rs  memory.x  openocd.cfg  openocd.gdb
.cargo/: config
src/: main.rs
